packages/example/content/essentials-core/7.4.0/introduction/00.overview.md
---
title: Overview
index: 0
---

# Overview

Essentials Core contains the common services and frameworks for the platform, enabling a consistent platform and abstracting away technical complexities for important functionality such as Authentication, Authorization, Audit, Consent Management, Entitlements, Notifications, Settings, Catalog, Status, and more.

These foundational core services provide a point of view that ensures consistency.

- Develop once
- Learn once
- Deploy once
- Support once

The frameworks, engineering guidance, user interface, and services, combined together provide the implementation of these key concepts.

Allowing developers to focus on business functionality and integration rather than having development squads spending time building out foundational platform services.

## Concepts

The following are the foundational building blocks for the platform's common services, ensuring a consistent platform that abstracts away technical complexities and importantly provides: 

- Authentication
- Authorization
- Entitlements
- Audit
- Privacy and Consent
- Requests and Operational Processing
- Configuration Management
- Status and Health

## Applications

- Launchpad – home for your projects and team management
- Catalog - define and manage the lifecycle of your services
- Admin – track and manage the platform, its teams, and users
- Status – gain insight into maintenance events and outages
- Docs – centralized location for all information on the platform

## Frameworks

See [framework architecture](/essentials-core/architecture/framework-architecture) to find out more information.

## Guidance

The platform has been built with a set of easy to use standards that allow for a faster adoption.

## Dependencies

See [application architecture](/essentials-core/architecture/application-architecture) to find out more information.
