packages/example/content/essentials-core/7.6.0/introduction/00.overview.md
---
title: Overview
index: 0
---

# Overview

IBM Services Essentials is your platform for accelerating delivery with quality. Delivery can be complex and IBM Services Essentials provides discovery and adoption capabilities for a wide catalog of IBM services and code assets optimized for IBM Services delivery. It bridges the gap between services, and ties them together into a consistent and harmonized experience by providing a common, centralized, and secure platform for all your tools, services, and applications. This approach accelerates development and delivery.

IBM Services Essentials Core contains the common services and frameworks for the platform, enabling a consistent platform and abstracting away technical complexities for important functionality such as Authentication, Authorization, Audit, Consent Management, Entitlements, Notifications, Settings, Catalog, Status, and more.

These foundational core services provide a point of view that ensures consistency.

- Develop once
- Learn once
- Deploy once
- Support once

The frameworks, engineering guidance, user interface, and services, combined together provide the implementation of these key concepts, allowing developers to focus on business functionality and integration rather than having development squads spending time building out foundational platform services.

## Frameworks

Developer APIs and frameworks are provided for popular languages to build, extend, and hook into functionality provided by the platform. There are two main ways to extend the platform:

- Frameworks / Libraries
- APIs

Refer to the articles in [Extending the Platform with Essentials Core](/essentials-core/extending/getting-started) and [Framework Architecture](/essentials-core/architecture/framework-architecture) for additional information.

## Applications

The user interface presented in the Essentials Core application provides the following applications for managing users and services, as well as dashboards for insights into system performance. 

- Launchpad – home for your projects and team management
- Catalog - define and manage the lifecycle of your services
- Admin – track and manage the platform, its teams, and users
- Status – gain insight into maintenance events and outages
- Docs – centralized location for all information on the platform

Refer to [Navigating Essentials Core](/essentials-core/introduction/navigating-core) for guidance.

## Guidance

The platform has been built with a set of easy to use standards that allow for a faster adoption.

## Dependencies

See [Application Architecture](/essentials-core/architecture/application-architecture) to find out more information.

## Background

The platform was originally created by the Mobile at Scale DevOps team as the Boomerang platform, with the primary purpose of providing the efficiencies and added value required to deliver large scale, multiyear mobile projects. It evolved over a period of time to a platform that provides a fully integrated technology stack for all delivery projects, whether bespoke application or at scale.
